--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Oct 01 23:21:30 NZDT 2020
-sdk.dir=C\:\\Users\\Johanna\\AppData\\Local\\Android\\Sdk
+#Sun Nov 01 07:47:16 NZDT 2020
+sdk.dir=/Users/junepc/Library/Android/sdk
